sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: '(' expected but identifier found.
      if isSmallerThan(i+k-1,i+k)==false{
         ^